# denoter

./: .coveragerc  .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
denoter/: core.py  scripts.py  utils.py
denoter/tests/: 20230717T202456--title-on-the-first-line.md  test_core.py  test_scripts.py  test_utils.py
