[project]
name = "denoter"
description = "Rename files and folders according to emacs denote"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.8"
dependencies = ["typer[all]"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mypy"
]

[project.urls]
homepage = "https://github.com/nens/denoter"

[project.scripts]
denoter = "denoter.scripts:app"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["denoter*"]
# package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "denoter.__version__"}

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true

[tool.pytest.ini_options]
norecursedirs=".venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
testpaths = "denoter"
